Jump history view, Refactor

--- a/styles/markdown-hopper.less
+++ b/styles/markdown-hopper.less
@@ -100,3 +100,10 @@ div.markdown-hopper-toc-view {
     }
   }
 }
+
+div.markdown-hopper-jump-history-view {
+  ol {
+    height: 75% !important;
+    max-height: 500px !important;
+  }
+}
