README, some fix

--- a/styles/markdown-hopper.less
+++ b/styles/markdown-hopper.less
@@ -4,7 +4,7 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-div.markdown-hopper-toc-view {
+div.markdown-hopper {
 
   ol {
     height: 75% !important;
@@ -98,12 +98,5 @@ div.markdown-hopper-toc-view {
         text-align: right;
       }
     }
-  }
-}
-
-div.markdown-hopper-jump-history-view {
-  ol {
-    height: 75% !important;
-    max-height: 500px !important;
   }
 }
